--- a/src/styles/mixins/_selectedItem.scss
+++ b/src/styles/mixins/_selectedItem.scss
@@ -5,9 +5,11 @@
   display: grid;
   grid-template-columns: min-content $image-height 1fr;
   grid-template-rows: 1fr min-content;
+  height: 600px;
   gap: 2rem;
   position: absolute;
-  max-width: 900px;
+  transform: translate(-50%, -50%);
+  width: 900px;
   box-sizing: border-box;
   transition: all 0.2s ease-in-out;
 
@@ -82,6 +84,7 @@
   &__meta {
     display: flex;
     gap: 1rem;
+    pointer-events: none;
   }
 
   &__pill {
@@ -120,7 +123,7 @@
       display: flex;
       flex-direction: column;
       flex: 0 0 auto;
-      max-width: 120px;
+      max-width: 100px;
       width: 100%;
       gap: 0.5rem;
       transform: all 0.2s ease-in-out;
@@ -144,19 +147,33 @@
   }
 
   @media screen and (max-width: $sm-breakpoint) {
-    grid-template-columns: min-content;
-    grid-template-rows: auto;
-    // max-width: 100%;
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    width: 96%;
+    gap: 0.5rem;
+    position: fixed;
+    justify-content: space-between;
+    height: 100dvh;
+    padding: 8rem 0 0rem 0;
+    border-radius: 0;
+
+    &__backLink {
+      position: sticky;
+      top: 4rem;
+      &:hover {
+        transform: scale(1);
+        text-decoration: none;
+      }
+    }
 
     &__cover {
-      //   max-width: 400px;
       align-items: center;
     }
 
     &__image {
-      width: 100%;
-      height: auto;
+      width: $image-height/2;
+      height: $image-height/2;
+      aspect-ratio: 1 / 1;
     }
 
     &__name {
