--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -5,15 +5,23 @@ $positionFromTop: 4rem;
 
 .page {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   align-items: center;
   align-self: center;
+  justify-self: center;
   justify-content: center;
-  padding: 0.5rem;
+  padding: 20vh 1rem 2rem 1rem;
+  gap: 1rem;
+  overflow: hidden;
 
   & > :first-child {
     border-radius: 1rem;
+  }
+
+  @media screen and (min-width: $sm-breakpoint) {
+    padding: 0;
+    gap: 4rem;
   }
 }
