--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -5,7 +5,7 @@
   border-radius: 0.5rem;
   font-size: 0.875rem;
   font-weight: 600;
-  padding: 0.1rem 0.5rem;
+  padding: 2px 6px;
   text-transform: uppercase;
   text-overflow: ellipsis;
   overflow: hidden;
