--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -13,7 +13,7 @@ $positionFromTop: 4rem;
   align-self: center;
   justify-self: center;
   justify-content: center;
-  padding: 20vh 1rem 2rem 1rem;
+  // padding: 20vh 1rem 2rem 1rem;
   gap: 1rem;
   overflow: hidden;
 
