--- a/src/styles/mixins/_selectedItem.scss
+++ b/src/styles/mixins/_selectedItem.scss
@@ -29,6 +29,7 @@
     height: fit-content;
     background: rgba($gray-dark, 0.2);
     border-radius: 0.5rem;
+    transition: all 0.2s ease-in-out;
 
     .spotifyProfileIcon {
       position: absolute;
@@ -127,7 +128,7 @@
     gap: 4px;
     padding: 0.5rem 2rem 0.5rem 0.75rem;
     background-color: rgba($gray-dark, 0.2);
-    border-radius: 0.75rem;
+    border-radius: 0.5rem;
     font-size: 0.875rem;
     color: $black;
     text-transform: capitalize;
@@ -172,9 +173,10 @@
       width: 100%;
       gap: 0.5rem;
       transform: all 0.2s ease-in-out;
+      z-index: 3000;
 
       @media screen and (max-width: $xxl-breakpoint) {
-        max-width: 140px;
+        max-width: 100px;
       }
     }
 
